# GPU-Automata

./: CMakeLists.txt
include/: Automata.h  GLCompute.h  MainGame.h  MyException.h
res/shaders/: compute.comp
src/: Automata.cpp  MainGame.cpp  main.cpp
